Improve user interface for filter and body.

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f6fa;
+  padding-top: 149px;
 }
 
 code {
